tests/err02.json.err
Parse error at line 003

001: {
002:       
003: 
     ^
Unexpected end
